<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gradient"
        android:focusableInTouchMode="true"
        tools:context="nl.intratuin.PersonalInfoActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/firstname"
            android:textColor="@color/textColorLight"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/tvFirstName"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/textedit"
            android:hint="@string/firstname"
            android:inputType="textNoSuggestions|textCapWords"
            android:maxLength="100"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/firstName"
            android:layout_marginTop="13dp"
            android:text="@string/lastname"
            android:textColor="@color/textColorLight"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/tvLastName"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/textedit"
            android:hint="@string/lastname"
            android:inputType="textNoSuggestions|textCapWords"
            android:maxLength="100"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="16dp" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="62dp"
                android:layout_marginRight="62dp"
                android:buttonTint="#ffffff"
                android:text="@string/male"
                android:textColor="@color/textColorLight"
                android:textSize="14dp" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/rbMale"
                android:buttonTint="#ffffff"
                android:text="@string/female"
                android:textColor="@color/textColorLight"
                android:textSize="14dp" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/rgGender"
            android:layout_marginTop="13dp"
            android:text="@string/birthday"
            android:textColor="@color/textColorLight"
            android:textSize="14dp" />
        <EditText
            android:id="@+id/birthday"
            android:layout_width="130dp"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/tvBirthday"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/textedit"
            android:ems="10"
            android:hint="@string/birthday_hint"
            android:maxLength="10"
            android:paddingLeft="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:editable="false"
            android:textSize="15dp"
            android:paddingRight="10dp"
            android:cursorVisible="false"
            android:inputType="none"/>
        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/birthday"
            android:layout_marginTop="13dp"
            android:text="@string/phone"
            android:textColor="@color/textColorLight"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/tvPhoneNumber"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/textedit"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:maxLength="17"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvHouseNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/phoneNumber"
            android:layout_marginTop="13dp"
            android:text="@string/house"
            android:textColor="@color/textColorLight"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/houseNumber"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/tvHouseNumber"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/textedit"
            android:hint="@string/house"
            android:inputType="textNoSuggestions|text"
            android:maxLength="100"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvStreetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvHouseNumber"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_toRightOf="@+id/tvHouseNumber"
            android:text="@string/street"
            android:textColor="@color/textColorLight"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/streetName"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/tvStreetName"
            android:layout_below="@+id/tvStreetName"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/houseNumber"
            android:background="@drawable/textedit"
            android:hint="@string/street"
            android:inputType="textNoSuggestions|textCapWords"
            android:maxLength="100"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/houseNumber"
            android:layout_marginTop="13dp"
            android:text="@string/city"
            android:textColor="@color/textColorLight"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="215dp"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/tvFirstName"
            android:layout_below="@+id/tvCity"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/textedit"
            android:hint="@string/city"
            android:inputType="textNoSuggestions|text"
            android:maxLength="100"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvPostcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvCity"
            android:layout_marginLeft="210dp"
            android:layout_marginStart="210dp"
            android:layout_toRightOf="@+id/tvCity"
            android:text="@string/post"
            android:textColor="@color/textColorLight"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/postcode"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/tvPostcode"
            android:layout_below="@+id/tvPostcode"
            android:layout_marginTop="3dp"
            android:background="@drawable/textedit"
            android:hint="@string/post"
            android:inputType="number"
            android:maxLength="5"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="16dp" />

        <Button
            android:id="@+id/bSave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/city"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_action"
            android:text="@string/save"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>