<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:backgroundTint="#000000">

    <RelativeLayout
        android:id="@+id/rlRecover"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        tools:context="nl.intratuin.RecoverActivity">

        <ImageView
            android:id="@+id/ivIntratuin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#FFFFFF"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_below="@+id/ivIntratuin"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/textedit"
            android:drawableLeft="@drawable/ic_action_name"
            android:password="false"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/bRecover"
            android:background="@drawable/button_action"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmailAddress"
            android:text="@string/recoverbut"
            android:clickable="false"
            android:textColor="@color/textColor"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/bRegister"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/register"
            android:textSize="10sp"
            android:background="@drawable/button_minor_action"
            android:layout_marginTop="15dp"
            android:clickable="false"
            android:layout_below="@+id/bRecover"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="50dp"
            android:textColor="@color/textColorLight" />

        <Button
            android:id="@+id/bBack"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="Back"
            android:textSize="10sp"
            android:background="@drawable/button_minor_action"
            android:clickable="false"
            android:layout_alignTop="@+id/bRegister"
            android:layout_alignLeft="@+id/bRecover"
            android:layout_alignStart="@+id/bRecover"
            android:layout_toLeftOf="@+id/bRegister"
            android:layout_marginRight="15dp"
            android:textColor="@color/textColorLight" />

    </RelativeLayout>

</ScrollView>
