<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gradient"
        android:focusableInTouchMode="true"
        tools:context="nl.intratuin.EmailEditActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/tvCurrentEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/current_email"
            android:textColor="@color/textColorLight"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/currentEmail"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/tvCurrentEmail"
            android:layout_below="@+id/tvCurrentEmail"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textedit"
            android:hint="@string/current_email"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvNewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvCurrentEmail"
            android:layout_below="@+id/currentEmail"
            android:layout_marginTop="20dp"
            android:text="@string/new_email"
            android:textColor="@color/textColorLight"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/tvCurrentEmail"
            android:layout_below="@+id/tvNewEmail"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textedit"
            android:hint="@string/new_email"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="16dp" />

        <Button
            android:id="@+id/saveEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/newEmail"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_action"
            android:text="@string/save"
            android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>